flexboxing & removed large gap above "Wallets" header

--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
         </div>
 
         <!--wallet selection-->
-        <div class="col-md-11 col-12 py-2 text-center index-wallet-section"><br>    
-            <h2>Wallets</h2>
+        <div class="col-md-11 col-12 pb-2 text-center index-wallet-section"><br>    
+            <h2 class="">Wallets</h2>
             <div class="row col-12 mx-auto mb-3 d-flex-wrap index-wallet-container"><br>
                   <div class="col-md-3 col-sm-4 col-6 index-wall">
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
                       <p class="panel-footer">Food</p>
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-4 col-6 index-wall"> 
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
                       <p class="panel-footer">Recreation</p>
                     </div>
                   </div> 
                   <div class="col-md-3 col-sm-4 col-6 index-wall"> 
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
                       <p class="panel-footer">Transport</p>
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-4 col-6 index-wall"> 
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
                       <p class="panel-footer">Others</p>
                     </div>
                   </div>
