--- a/index.html
+++ b/index.html
@@ -42,31 +42,33 @@
             </div>
         </div>
 
+        <div class="bg-primary w-100 h-100 hello"></div>
+
         <!--wallet selection-->
         <div class="col-md-11 col-12 pb-2 text-center index-wallet-section"><br>    
             <h2 class="">Wallets</h2>
             <div class="row col-12 mx-auto mb-3 d-flex-wrap index-wallet-container"><br>
                   <div class="col-md-3 col-sm-4 col-6 index-wall">
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
+                      <div class="p-2 p-sm-3 p-lg-4 panel-body" style="background-color:#cccccc;border-radius:20px;"><img src="images/wallet-icon/017-tablet.png" class="img-responsive" style="width:100%;filter:invert(94%)" alt="Image"></div>
                       <p class="panel-footer">Food</p>
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-4 col-6 index-wall"> 
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
+                      <div class="p-2 p-sm-3 p-lg-4 panel-body" style="background-color:#cccccc;border-radius:20px;"><img src="images/wallet-icon/001-working.png" class="img-responsive" style="width:100%;filter:invert(94%)" alt="Image"></div>
                       <p class="panel-footer">Recreation</p>
                     </div>
                   </div> 
                   <div class="col-md-3 col-sm-4 col-6 index-wall"> 
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
+                      <div class="p-2 p-sm-3 p-lg-4 panel-body" style="background-color:#cccccc;border-radius:20px;"><img src="images/wallet-icon/001-working.png" class="img-responsive" style="width:100%;filter:invert(94%)" alt="Image"></div>
                       <p class="panel-footer">Transport</p>
                     </div>
                   </div>
                   <div class="col-md-3 col-sm-4 col-6 index-wall"> 
                     <div class="panel">
-                      <div class="panel-body"><img src="https://placehold.it/150x150?text=IMAGE" class="img-responsive" style="width:100%;border-radius:20px" alt="Image"></div>
+                      <div class="p-2 p-sm-3 p-lg-4 panel-body" style="background-color:#cccccc;border-radius:20px;"><img src="images/wallet-icon/001-working.png" class="img-responsive" style="width:100%;filter:invert(94%)" alt="Image"></div>
                       <p class="panel-footer">Others</p>
                     </div>
                   </div>
