--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style.css">
         
         <!-- Normalise CSS -->
         <link rel="stylesheet" href="normalize.css">
@@ -220,35 +219,35 @@
               <div class="text-center"><h3>Business News</h3></div>
             </div>
 
-              <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+              <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-4 px-sm-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
-                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                  <span class="col-12 d-block m-0 sou"> <b> | </b></span>
+                  <span class="col-12 p-0 pb-2 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-4 px-sm-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
-                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                  <span class="col-12 d-block m-0 sou"> <b> | </b></span>
+                  <span class="col-12 p-0 pb-2 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-4 px-sm-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
-                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                  <span class="col-12 d-block m-0 sou"> <b> | </b></span>
+                  <span class="col-12 p-0 pb-2 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-5 border-0 rounded text-left bg-transparent art">
+            <button class="col-12 d-flex flex-nowrap my-5 my-sm-2 mr-3 px-4 px-sm-5 border-0 rounded text-left bg-transparent art">
                 <span class="col-9 p-0 headline">
-                  <span class="col-12 d-block m-0 sou">News Site <b> | </b></span>
-                  <span class="col-12 p-0 tit">2 family COVID-19 clusters a asobering remindera about</span>
+                  <span class="col-12 d-block m-0 sou"> <b> | </b></span>
+                  <span class="col-12 p-0 pb-2 tit">2 family COVID-19 clusters a asobering remindera about</span>
                 </span>
                 <img class="col-3 p-0 ml-1 rounded-circle photo" src="https://placehold.it/150x150?text=IMAGE" alt="photo">
             </button>
-
+            <p class="m-0 text-center upTxt">Last updated on <b><span id="update"></span></b></p>
           </div>
 
     </div>
