dropdown menus work

--- a/index.html
+++ b/index.html
@@ -120,22 +120,9 @@
                <div class="col-12 col-sm-10 my-2 CurrVald">
                   <div class="col-10 mx-auto justify-content-center dropup">
                      <button class="col-12 btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     AKN
+                     SGD
                      </button>
-                     <div class="col-10 col-sm-11 dropdown-menu CurDrop">
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
+                     <div class="col-10 text-center col-sm-11 dropdown-menu CurDrop">
                      </div>
                   </div>
                   <form class="col-12 h-50 mx-auto">
@@ -145,24 +132,9 @@
                <div class="col-12 col-sm-10 my-2 CurrVald">
                   <div class="col-10 mx-auto justify-content-center dropup">
                      <button class="col-12 btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Country
+                     SGD
                      </button>
-                     <div class="col-10 col-sm-11 dropdown-menu CurDrop">
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
-                        <a class="dropdown-item" href="#">AKN</a>
-                        <a class="dropdown-item" href="#">ABN</a>
-                        <a class="dropdown-item" href="#">ACT</a>
+                     <div class="col-10 text-center col-sm-11 dropdown-menu CurDrop">
                      </div>
                   </div>
                   <form class="col-12 h-50 mx-auto">
@@ -226,7 +198,7 @@
       <script src="https://www.gstatic.com/charts/loader.js"></script>
       <div id="chart_div"></div>
       <!-- jQuery -->
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
       <!-- Javascript and JSON -->
       <script src="script.js"></script>
