completed currency converter

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                </div>
             </div>
             <div class="col-12 p-0 d-flex flex-wrap justify-content-center">
-               <div class="col-12 col-sm-10 my-2 CurrVald">
+               <div class="col-12 col-sm-10 my-2 currVald">
                   <div class="col-10 mx-auto justify-content-center dropup">
                      <button class="col-12 btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      SGD
@@ -125,11 +125,11 @@
                      <div class="col-10 text-center col-sm-11 dropdown-menu CurDrop">
                      </div>
                   </div>
-                  <form class="col-12 h-50 mx-auto">
-                     <input class="col-12 w-100 h-100" style="border: 0" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+                  <form class="col-12 h-50 mx-auto curFor">
+                     <input class="col-12 w-100 h-100" style="border: 0" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00"></input>
                   </form>
                </div>
-               <div class="col-12 col-sm-10 my-2 CurrVald">
+               <div class="col-12 col-sm-10 my-2 currVald">
                   <div class="col-10 mx-auto justify-content-center dropup">
                      <button class="col-12 btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      SGD
@@ -137,8 +137,8 @@
                      <div class="col-10 text-center col-sm-11 dropdown-menu CurDrop">
                      </div>
                   </div>
-                  <form class="col-12 h-50 mx-auto">
-                     <input class="col-12 w-100 h-100" style="border: 0" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00">
+                  <form class="col-12 h-50 mx-auto curFor">
+                     <input class="col-12 w-100 h-100" style="border: 0" type="text" name="currency-field" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" value="" data-type="currency" placeholder="$1,000,000.00"></input>
                   </form>
                </div>
             </div>
