--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <p class="p-0">Month</p>
          </div>
       </div>
-      <div class="bg-primary w-100 h-100 hello"></div>
       <!--wallet selection-->
       <div class="col-md-11 col-12 pb-2 text-center index-wallet-section">
          <br>    
@@ -66,21 +65,21 @@
          <div class="col-12 m-0 amountSpent">
             <div class="jumbotron bg-transparent topText">
                <div class="text-center">
-                  <h3>$$$$</h3>
+                  <h3 id="tot">$$$$</h3>
                   <p>spent this month</p>
                </div>
             </div>
             <div class="d-flex">
-               <div class="col-11 p-0 mx-auto progress">
-                  <div class="progress-bar bar" role="progressbar" style="width: 19%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">pofn </span></div>
-                  <div class="progress-bar bg-success bar" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">p nd gn </span></div>
-                  <div class="progress-bar bg-info bar" role="progressbar" style="width: 22%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">pfjsnd</span></div>
-                  <div class="progress-bar bg-danger bar" role="progressbar" style="width: 30%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">dbfhdb</span></div>
+               <div class="col-11 p-0 mx-auto bg-transparent progress">
+                  <div class="progress-bar bg-success bar" role="progressbar" style="width: 25%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">Food</span></div>
+                  <div class="progress-bar bar" role="progressbar" style="width: 19%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">Transt</span></div>
+                  <div class="progress-bar bg-info bar" role="progressbar" style="width: 22%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">Rec</span></div>
+                  <div class="progress-bar bg-danger bar" role="progressbar" style="width: 30%" aria-valuemin="0" aria-valuemax="100"><span class="barTxt">Others</span></div>
                </div>
             </div>
          </div>
          <!--biggest purchase-->
-         <div class="col-12 BigPur">
+         <div class="col-12 bigPur">
             <div class="jumbotron bg-transparent topText">
                <div class="text-center">
                   <h3>Biggest Purchase</h3>
@@ -110,7 +109,7 @@
             </div>
          </div>
          <!--currency converter-->
-         <div class="col-12 d-flex flex-wrap justify-content-center CurrConv">
+         <div class="col-12 d-flex flex-wrap justify-content-center currConv">
             <div class="col-12 jumbotron bg-transparent topText">
                <div class="text-center">
                   <h3>Currency Converter</h3>
@@ -122,7 +121,7 @@
                      <button class="col-12 btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      SGD
                      </button>
-                     <div class="col-10 text-center col-sm-11 dropdown-menu CurDrop">
+                     <div class="col-10 text-center col-sm-11 dropdown-menu curDrop">
                      </div>
                   </div>
                   <form class="col-12 h-50 mx-auto curFor">
@@ -134,7 +133,7 @@
                      <button class="col-12 btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                      SGD
                      </button>
-                     <div class="col-10 text-center col-sm-11 dropdown-menu CurDrop">
+                     <div class="col-10 text-center col-sm-11 dropdown-menu curDrop">
                      </div>
                   </div>
                   <form class="col-12 h-50 mx-auto curFor">
@@ -152,7 +151,7 @@
                   <p>Were you money conscious this month?</p>
                </div>
             </div>
-            <div id="index-flowday" style="height:410px"></div>
+            <div id="index-flowday"></div>
          </div>
          <!--business news-->
          <div class="col-12 news">
@@ -191,10 +190,17 @@
             </button>
             <p class="m-0 text-center upTxt">Last updated on <b><span id="update"></span></b></p>
          </div>
+                     <!--input box (ran out of time)-->
+                     <div class="col-12 news">
+                        <input class="col-12 w-100 h-100 imp" style="border: 0" type="text" placeholder="input json code"></input>
+                     </div>
       </div>
       <div class="plus-button">
          <p class="mx-auto h-100 plus">+</p>
       </div>
+
+
+
       <script src="https://www.gstatic.com/charts/loader.js"></script>
       <div id="chart_div"></div>
       <!-- jQuery -->
